@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Invite and authenticate users
skinparam class {
 BorderColor #344054
 FontColor #101828
 BackgroundColor #F9FAFB
}
class StudioAccount {
 +Guid Id
 +string Email
 +AccountRole[] Roles
 +bool EmailConfirmed
 +string SecurityStamp
 +ConfirmInvitation(): void
}
class Invitation {
 +Guid AccountId
 +DateTimeOffset ExpiresAt
 +DateTimeOffset? UsedAt
}
StudioAccount "1" *-- "0..*" Invitation : Single-use account invitation
interface IStudioStore {
 +Run<T>(lockKey, action): Task<T>
}
interface IStudioTransaction {
 +Get<T>(id): Task<T?>
 +List<T>(): Task<T[]>
 +Save<T>(value, expectedVersion): Task
}
IStudioStore ..> IStudioTransaction : scopes one committed unit of work
IStudioStore o-- StudioAccount : persists or supplies inputs
interface IEmailSender
class InviteClientHandler
InviteClientHandler ..> IEmailSender : uses
InviteClientHandler ..> StudioAccount : orchestrates
@enduml
